# abel

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mingw64.cmake
brain/: Brain.cpp  Brain.h  Column.cpp  Column.h  Core.h  Glia.cpp  Glia.h  HodgkinHuxleyNeuron.h  IzhikevichNeuron.h  Neurons.cpp  Neurons.h  PredictiveCoder.cpp  PredictiveCoder.h  Quantum.cpp  Quantum.h  Synapses.cpp  Synapses.h
brain/spatial/: Coords.cpp  Coords.h  Topology.cpp  Topology.h  Wiring.cpp  Wiring.h
build-windows/: CMakeCache.txt
intent_engine/: EvolutionManager.cpp  EvolutionManager.h  MeshGenerator.cpp  MeshGenerator.h  PhysicsGenerator.cpp  PhysicsGenerator.h  PlayerGenerator.cpp  PlayerGenerator.h  TextureGenerator.cpp  TextureGenerator.h  WorldDecoder.cpp  WorldDecoder.h
online/: ExperienceBuffer.cpp  ExperienceBuffer.h  OnlineTrainer.cpp  OnlineTrainer.h
render/: Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h
transformer/: Inference.cpp  Inference.h  Loader.cpp  Loader.h  Model.cpp  Model.h  ggml_ext.cpp  ggml_ext.h
world/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  PhysicsEngine.cpp  PhysicsEngine.h  Player.cpp  Player.h  World.cpp  World.h
